# methodology-task1

./: README.md  demo.cast  engine.py  geom_prog.py  main.py  nok.py  pyproject.toml
games/: geom_prog.py  nok.py
